--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -394,10 +394,12 @@
       // ============================================================================================================================
       // CAR
       // ============================================================================================================================
+
       {
         "position": [0, 0, 0],
-        "rotation": [0, 0, 0],
-        "scale": [1, 1, 1],
+        "scale": [2, 2, 2],
+        "rotation": [-90, 90, 0],
+        "initalRotation" : true,
         "components": [
           {
             "type": "Movement",
@@ -418,8 +420,7 @@
         ],
         "children": [
           {
-            "rotation": [270, 0, 90],
-            "scale": [4, 4, 4],
+            "rotation": [0, 0, 0],
             "children": [
               {
                 "components": [
