--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -391,298 +391,25 @@
       }
     },
     "world": [
-      // ============================================================================================================================
-      // CAR
-      // ============================================================================================================================
-
       {
-        "position": [0, 0, 0],
-        "scale": [2, 2, 2],
-        "rotation": [-90, 90, 0],
-        "initalRotation": true,
+        "position": [0, 0, 10],
         "components": [
           {
-            "type": "Movement",
-            "forward": [0, 0, -1]
-          },
-          {
-            "type": "Camera",
-            "distance": -3.0
-          },
-          {
-            "type": "Player"
-          },
-          {
-            "type": "Rigid Body",
-            "bodyType": "cube",
-            "static": true,
-            "tag": "car"
+            "type": "Camera"
           }
         ],
         "children": [
           {
-            "rotation": [0, 0, 0],
-            "children": [
-              {
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "fennecmat0",
-                    "material": "fennecmat0"
-                  }
-                ]
-              },
-              {
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "fennecmat1",
-                    "material": "fennecmat1"
-                  }
-                ]
-              },
-              {
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "fennecmat2",
-                    "material": "fennecmat2"
-                  }
-                ]
-              },
-              {
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "fennecmat3",
-                    "material": "fennecmat3"
-                  }
-                ]
-              },
-              {
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "fennecmat4",
-                    "material": "fennecmat4"
-                  }
-                ]
-              },
-              {
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "fennecmat5",
-                    "material": "fennecmat5"
-                  }
-                ]
-              },
-              {
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "fennecmat6",
-                    "material": "fennecmat6"
-                  }
-                ]
-              },
-              {
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "obj3mat7",
-                    "material": "fennecmat7"
-                  }
-                ]
-              },
-              {
-                "components": [
-                  {
-                    "type": "Mesh Renderer",
-                    "mesh": "obj2mat7",
-                    "material": "fennecmat7"
-                  }
-                ]
-              }
-            ]
-          }
-        ]
-      },
-
-      {
-        "position": [0, 50, -10],
-        "rotation": [45, 45, 0],
-        "scale": [5, 5, 5],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "sphere",
-            "material": "moon"
-          },
-          {
-            "type": "Movement",
-            "angularVelocity": [0, 90, 0]
-          }
-        ],
-        "children": [
-          {
+            "position": [1, -1, -1],
+            "rotation": [45, 45, 0],
+            "scale": [0.1, 0.1, 1.0],
             "components": [
               {
-                "type": "Light",
-                "lightType": 0,
-                "direction": [0, -1, 1],
-                "color": [1, 1, 1],
-                "intensity": 1.5
+                "type": "Mesh Renderer",
+                "mesh": "cube",
+                "material": "metal"
               }
             ]
-          }
-        ]
-      },
-
-      // ============================================================================================================================
-      // BALL
-      // ============================================================================================================================
-      {
-        "position": [0, 0, -10],
-        "rotation": [0, 0, 0],
-        "scale": [1, 1, 1],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "sphere",
-            "material": "ball"
-          },
-          {
-            "type": "Movement",
-            "canRoll": true
-          },
-          {
-            "type": "Ball Component"
-          },
-          {
-            "type": "Rigid Body",
-            "bodyType": "cube",
-            "static": false,
-            "tag": "ball"
-          }
-        ]
-      },
-
-      // ============================================================================================================================
-      // GROUND
-      // ============================================================================================================================
-      {
-        "position": [0, -1, 0],
-        "rotation": [-90, 0, 0],
-        "scale": [100, 100, 1],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "grass"
-          }
-        ]
-      },
-      // ============================================================================================================================
-      // WALLS
-      // ============================================================================================================================
-      // LEFT
-      {
-        "position": [-30, 0, 0],
-        "rotation": [0, 90, 0],
-        "scale": [100, 20, 1],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "cube",
-            "material": "glass"
-          },
-          {
-            "type": "Rigid Body",
-            "bodyType": "cube",
-            "static": false,
-            "tag": "wall",
-            "wallType": "left"
-          }
-        ]
-      },
-      // RIGHT
-      {
-        "position": [30, 0, 0],
-        "rotation": [0, 90, 0],
-        "scale": [100, 20, 1],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "cube",
-            "material": "glass"
-          },
-          {
-            "type": "Rigid Body",
-            "bodyType": "cube",
-            "static": false,
-            "tag": "wall",
-            "wallType": "right"
-          }
-        ]
-      },
-      // FRONT
-      {
-        "position": [0, 0, -60],
-        "rotation": [0, 0, 0],
-        "scale": [100, 20, 1],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "cube",
-            "material": "glass"
-          },
-          {
-            "type": "Rigid Body",
-            "bodyType": "cube",
-            "static": false,
-            "tag": "wall",
-            "wallType": "front"
-          }
-        ]
-      },
-      // BACK
-      {
-        "position": [0, 0, 60],
-        "rotation": [0, 0, 0],
-        "scale": [100, 20, 1],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "cube",
-            "material": "glass"
-          },
-          {
-            "type": "Rigid Body",
-            "bodyType": "cube",
-            "static": false,
-            "tag": "wall",
-            "wallType": "back"
-          }
-        ]
-      },
-      // ============================================================================================================================
-      // GOAL
-      {
-        "position": [0, 0, -60],
-        "rotation": [0, 0, 0],
-        "scale": [15, 8, 7],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "cube",
-            "material": "blue"
-          },
-          {
-            "type": "Rigid Body",
-            "bodyType": "cube",
-            "static": true,
-            "tag": "goal"
           }
         ]
       }
